@@ -1,21 +1,59 @@
+sudo: false
+addons:
+  apt:
+    packages:
+      - aspell
+      - aspell-en
 language: perl
 perl:
+  - "blead"
+  - "blead-thr"
+  - "5.28"
+  - "5.28-thr"
   - "5.26"
+  - "5.26-thr"
   - "5.24"
+  - "5.24-thr"
   - "5.22"
+  - "5.22-thr"
   - "5.20"
+  - "5.20-thr"
   - "5.18"
+  - "5.18-thr"
   - "5.16"
+  - "5.16-thr"
   - "5.14"
+  - "5.14-thr"
   - "5.12"
+  - "5.12-thr"
   - "5.10"
+  - "5.10-thr"
   - "5.8"
+  - "5.8-thr"
 env:
-  - "HARNESS_OPTIONS=j9"
+  global:
+    - TEST_PARTITIONS=4
+    - AUTHOR_TESTING=1
+    - AUTOMATED_TESTING=1
+    - RELEASE_TESTING=1
+matrix:
+  allow_failures:
+    - perl: blead
+    - perl: blead-thr
+cache:
+  directories:
+    - $HOME/perl5
+before_install:
+  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+  - source ~/travis-perl-helpers/init --always-upgrade-modules
+  - build-perl
+  - perl -V
+  - build-dist
+  - cd $BUILD_DIR
 install:
-  - "cpanm -n Test::More Test::Pod Test::Pod::Coverage"
-  - rm -f cpanfile
-  - "cpanm -n --installdeps ."
-sudo: false
-notifications:
-  email: false
+  - cpan-install List::Util Test::Spelling Test::Pod Test::Pod::Coverage Test::Version Test::EOL
+  - cpan-install --deps
+script:
+  - perl Makefile.PL
+  - make
+  - prove -v -r -b -s -j$(test-jobs) $(test-files)
